Prevent scroll events over app grid from falling through

Bug: 914025
Change-Id: Ic714a6586b0c183f493c0da08e8383decff0ed68
Reviewed-on: https://chromium-review.googlesource.com/c/1379315
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Cr-Commit-Position: refs/heads/master@{#617200}
Former-commit-id: 5136abe4428e487d5697121d7572eb2f52d923d0