ash/app_list/views/apps_grid_view.cc
@@ -929,11 +929,11 @@ void AppsGridView::OnGestureEvent(ui::GestureEvent* event) {
     return;
   }
 
-  // Scroll begin events should not be passed to ancestor views if it occurs
-  // inside the folder bounds even it is not handled. This prevents user from
-  // closing the folder when scrolling inside it.
+  // Scroll begin events should not be passed to ancestor views from apps grid
+  // in our current design. This prevents both ignoring horizontal scrolls in
+  // app list, and closing open folders.
   if (pagination_controller_->OnGestureEvent(*event, GetContentsBounds()) ||
-      (folder_delegate_ && event->type() == ui::ET_GESTURE_SCROLL_BEGIN)) {
+      event->type() == ui::ET_GESTURE_SCROLL_BEGIN) {
     event->SetHandled();
   }
 }
